# uv2nix-PyQt6

./: LICENSE  README.md  flake.nix  pyproject.toml  run-bundle-appimage.sh  run-bundle-docker.sh
src/hello_world/: __init__.py
