[project]
name = "hello-world"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
 "pyqt6>=6.11.0",
 "pyqt6-qt6>=6.11.0",
]

[project.scripts]
hello = "hello_world:hello"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
