[project]
name = "hello-world"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13,<3.14"
dependencies = [
 "pyqt6==6.10.2",
 "pyqt6-qt6==6.10.2",
]

[project.scripts]
hw_py = "hello_world:hello"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.setuptools.packages.find]
where = ["src"]
